ページネーション１

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,19 @@
 ja:
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
+  kaminari:
+    views:
+      pagination:
+        first: "&laquo; 最初"
+        last: "最後 &raquo;"
+        previous: "&lsaquo; 前"
+        next: "次 &rsaquo;"
+        truncate: "..."
   datetime:
     distance_in_words:
       half_a_minute: "30秒前後"
